k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote # اسم داخلي لخدمة vote
spec:
  type: ClusterIP
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result # اسم داخلي لخدمة result
spec:
  type: ClusterIP
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 4000 # بيحول من بورت 80 إلى 4000
---
# === أهم جزء ===
# بنعرّف Kubernetes إن "db" هو هو "db-postgresql"
apiVersion: v1
kind: Service
metadata:
  name: db # الاسم اللي الكود بتاعنا بيدور عليه
spec:
  type: ExternalName
  # ده العنوان الفعلي للـ postgres اللي نزلناه بـ Helm
  externalName: db-postgresql.default.svc.cluster.local 
---
# بنعرّف Kubernetes إن "redis" هو هو "redis-master"
apiVersion: v1
kind: Service
metadata:
  name: redis # الاسم اللي الكود بتاعنا بيدور عليه
spec:
  type: ExternalName
  # ده العنوان الفعلي للـ redis اللي نزلناه بـ Helm
  externalName: redis-master.default.svc.cluster.local
